# RowFlow

./: .gitignore  BACKEND_IMPLEMENTATION_SUMMARY.md  Cargo.toml  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  README.md  TEST_DATABASE.md  clear-storage.html  docker-compose.s3-test.yml  docker-compose.test.yml  eslint.config.js  minio-connection-settings.json  package.json  pnpm-lock.yaml  rustfmt.toml  test-db-connection.json  test-db-init.sql
apps/desktop/: .eslintrc.json  COMMAND_PALETTE.md  COMMAND_PALETTE_SUMMARY.md  KEYBOARD_SHORTCUTS.md  README.md  SCHEMA_BROWSER_IMPLEMENTATION.md  SCHEMA_BROWSER_QUICK_START.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  OLLAMA_INTEGRATION.md  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  add_padding.py  create_rounded_icon.py  icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  types.rs
apps/desktop/src-tauri/src/ai/: agent.rs  bundler.rs  mod.rs  ollama.rs  state.rs  supervisor.rs  vector_store.rs
apps/desktop/src-tauri/src/commands/: ai.rs  database.rs  mod.rs  s3.rs  schema.rs
apps/desktop/src/components/: AiChat.tsx  CommandPalette.tsx  ConnectionDialog.tsx  ConnectionForm.tsx  ConnectionList.tsx  ConnectionsPanel.tsx  FilePreviewDialog.tsx  GenerateTestDataDialog.tsx  Header.tsx  JsonSidebar.tsx  JsonViewerDialog.tsx  KeyboardShortcutsDialog.tsx  McpInfoDialog.tsx  OllamaModelManager.tsx  QueryPanel.tsx  QueryTabs.tsx  ResultCell.tsx  ResultsGrid.tsx  S3Browser.tsx  S3ConnectionForm.tsx  S3ObjectList.tsx  SchemaGraph.tsx  SchemaNodeContextMenu.tsx  SchemaPanel.tsx  SchemaSearch.tsx  SchemaStats.tsx  SchemaTree.tsx  Settings.tsx  SqlEditor.tsx
apps/desktop/src/components/ui/: textarea.tsx
apps/desktop/src/contexts/: CommandContext.tsx  DatabaseContext.tsx  SettingsContext.tsx
apps/desktop/src/examples/: CustomCommandsExample.tsx
apps/desktop/src/hooks/: useAutoEmbed.ts  useCommandPalette.ts  useDatabase.ts  useQueryExecution.ts  useRag.ts  useS3.ts  useS3Profiles.ts  useSchema.ts  useSchemaGraph.ts  useTheme.ts
apps/desktop/src/lib/: commands.ts  export.ts  fileTypes.ts  mcpConfig.ts  modelCheck.ts  recentCommands.ts  sqlFormatter.ts  sqlPlaceholders.ts  store.ts
apps/desktop/src/types/: ai.ts  connection.ts  query.ts  s3.ts  schema.ts
apps/mcp-server/: .env.example  .gitignore  CONNECTION_MANAGEMENT.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  debug-env.js  package.json  test-connection.sh  test-with-env.sh  tsconfig.json
apps/mcp-server/src/: connections.ts  db.ts  index.ts  types.ts  utils.ts
apps/mcp-server/src/tools/: cancel.ts  connection-add.ts  connection-list.ts  connection-test.ts  describe.ts  explain.ts  locks.ts  query.ts  sample.ts
apps/website/: components.json  next.config.ts  package.json  tailwind.config.ts  vercel.json
apps/website/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/website/components/: download.tsx  features.tsx  footer.tsx  hero.tsx
scripts/: setup-test-db.sh  setup-test-s3-bucket.sh
