[workspace]
members = [
    "apps/desktop/src-tauri",
    "packages/rust-shared"
]
resolver = "2"

[workspace.dependencies]
# Tauri
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.1"
tauri-plugin-store = "2.4"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
deadpool-postgres = "0.14.0"

# SSH tunnel
async-ssh2-tokio = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Type sharing
typeshare = "1.0.3"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
