[workspace]
members = [
    "apps/desktop/src-tauri",
    "packages/rust-shared"
]
resolver = "2"

[workspace.dependencies]
# Tauri
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.1"
tauri-plugin-store = "2.4"
tauri-plugin-fs = "2.1"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
deadpool-postgres = "0.14.0"

# SSH tunnel
async-ssh2-tokio = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Type sharing
typeshare = "1.0.3"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1.5"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
